Deploiement de la mise a jour V1

--- a/Commentaire.html
+++ b/Commentaire.html
@@ -5,11 +5,11 @@
     <met http-equiv="refresh" content="0;url=Maintenance.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSS/Com.css" rel="stylesheet">
-    <title>Commentaires et Notation</title>
+    <title>Décrivez votre expérience</title>
 </head>
 <body>
 
-    <h1>Commentaires et Notation</h1>
+    <h1>Commentaires</h1>
 
     <div class="moderator" title="Cliquez pour activer le mode modérateur">
         <img src="https://img.icons8.com/ios-filled/50/000000/hammer.png" alt="Modération">
@@ -17,9 +17,9 @@
 
     <div id="ratingForm">
         <h2>Laisser un commentaire</h2>
-        <input type="text" id="username" placeholder="Votre nom" required>
+        <input type="text" id="username" placeholder="Votre nom/Pseudo" required>
         
-        <textarea id="comment" rows="3" placeholder="Écrivez votre commentaire..." required></textarea>
+        <textarea id="comment" rows="3" placeholder="Écrivez votre commentaire ..." required></textarea>
         
         <div class="star-rating">
             <input type="radio" name="rating" id="star5" value="5"><label for="star5">★</label>
@@ -37,7 +37,12 @@
     </div>
 
 <script src="Java/script3.js"></script>
+
+<footer>
+    <small>  Chaque commentaire sera supprimé 7 jours suivant sa publication </small>
+  </footer>
 </body>
 </html>
+
 
 
