--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
 
     
               <section class="join-us">
-                <h2>Nous Rejoindre</h2>
+                <h2>Information</h2>
                 <br>
                 <div class="join-buttons">
-                    <a href="https://tomigun212.github.io/Palaroad/contact" class="join-link">Contact</a>
-                    <a href="https://discord.gg/uX8dNJV6vX" class="join-link discord-link" target="_blank">Rejoindre le Discord</a>
+                    <button class="btn btn-link" onclick="window.location.href='https://tomigun212.github.io/Palaroad/contact.html'"> Nous contacter  </button>
+                    <button class="btn btn-linkdisc" onclick="window.location.href='https://discord.gg/uX8dNJV6vX'"> Rejoindre le discord   </button>
+                    <button class="btn btn-Com" onclick="window.location.href='https://discord.gg/uX8dNJV6vX'"> Laisser un commentaire  </button>
                 </div>
             </section>
 
