--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="join-buttons">
                     <button class="btn btn-link" onclick="window.location.href='https://tomigun212.github.io/Palaroad/contact.html'"> Nous contacter  </button>
                     <button class="btn btn-linkdisc" onclick="window.location.href='https://discord.gg/uX8dNJV6vX'"> Rejoindre le discord   </button>
-                    <button class="btn btn-Com" onclick="window.location.href='https://discord.gg/uX8dNJV6vX'"> Laisser un commentaire  </button>
+                    <button class="btn btn-Com" onclick="window.location.href='https://tomigun212.github.io/Palaroad/Commentaire.html'"> Laisser un commentaire  </button>
                 </div>
             </section>
 
