--- a/Commentaire.html
+++ b/Commentaire.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=Maintenance.html">
+    <met http-equiv="refresh" content="0;url=Maintenance.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSS/Com.css" rel="stylesheet">
     <title>Décrivez votre expérience</title>
